--- a/_extensions/memo/_extension.yml
+++ b/_extensions/memo/_extension.yml
@@ -1,11 +1,24 @@
-title: Monash Memo Format Template
+title: Monash Memo
 author: Rob J Hyndman
-version: 0.1.0
+version: 2.0.0
+quarto-required: ">=1.4.0"
 contributes:
   formats:
     pdf:
-      template: monashmemo.tex
+      papersize: a4
+      fontsize: 11pt
+      toc: false
       pdf-engine: pdflatex
+      geometry:
+      - top=2.5cm
+      - bottom=2.5cm
+      - left=2cm
+      - right=2cm
+      block-headings: false
+      cite-method: biblatex
+      biblio-style: authoryear-comp
+      template-partials:
+        - title.tex
       format-resources:
         - monash2.png
         - MBSportrait.jpg
