--- a/_extensions/memo/_extension.yml
+++ b/_extensions/memo/_extension.yml
@@ -27,3 +27,27 @@ contributes:
         - EQUIS.png
         - AMBA.png
         - AACSB.png
+    typst:
+      template-partials:
+        - typst-template.typ
+        - typst-show.typ
+      fontsize: 11pt
+      date: today
+      date-format: "D MMMM YYYY"
+      lang: en
+      region: AU
+      paper: a4
+      toc: false
+      margin:
+        top: 1.5cm
+        bottom: 2cm
+        x: 2cm
+        y: 2cm
+      font-paths:
+        - fonts
+      format-resources:
+        - monash2.png
+        - MBSportrait.jpg
+        - EQUIS.png
+        - AMBA.png
+        - AACSB.png
