--- a/_extensions/memo/_extension.yml
+++ b/_extensions/memo/_extension.yml
@@ -42,8 +42,8 @@ contributes:
       margin:
         top: 2.7cm
         bottom: 2cm
-        x: 2cm
-        y: 2cm
+        left: 2cm
+        right: 2cm
       font-paths:
         - fonts
       format-resources:
